--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -43,7 +43,6 @@ allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
 allow 107.189.1.167;
-allow 107.189.1.175;
 allow 107.189.1.198;
 allow 107.189.12.3;
 allow 107.189.12.88;
@@ -122,6 +121,7 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -301,7 +301,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1059,6 +1058,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1086,6 +1086,7 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1192,7 +1193,6 @@ allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
-allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1727,7 +1727,7 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
-allow 2a12:5940:52c2::2;
+allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
@@ -1743,7 +1743,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.198.166.29;
+allow 3.219.102.190;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1770,7 +1770,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.129.199.195;
 allow 45.132.246.245;
-allow 45.133.16.36;
 allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
@@ -1994,6 +1993,7 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
+allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.213.174.248;
 allow 89.234.157.254;
@@ -2061,7 +2061,6 @@ allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
-allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
