--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -301,6 +302,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -624,7 +626,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.200.17.85;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
@@ -1718,7 +1719,6 @@ set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::debc:26b9;
 set_real_ip_from 2a10:1fc0:1::e016:2586;
-set_real_ip_from 2a10:1fc0:8::a061:729b;
 set_real_ip_from 2a10:1fc0:d::7384:5a63;
 set_real_ip_from 2a10:1fc0:d::9c5b:b08e;
 set_real_ip_from 2a10:c800:1:9cc6::1;
@@ -1727,7 +1727,7 @@ set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
-set_real_ip_from 2a12:5940:9101::2;
+set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c051::2;
@@ -1743,7 +1743,6 @@ set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.219.102.190;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1865,7 +1864,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1893,6 +1891,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.243.143.181;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1993,7 +1992,6 @@ set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
-set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
@@ -2061,6 +2059,7 @@ set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
+set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.32.66.15;
