--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -766,6 +766,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:1fc0:10::debc:26b9;
 deny 2a10:1fc0:1::e016:2586;
+deny 2a10:1fc0:8::a061:729b;
 deny 2a10:1fc0:d::7384:5a63;
 deny 2a10:1fc0:d::9c5b:b08e;
 deny 2a10:c800:1:9cc6::1;
@@ -775,6 +776,7 @@ deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
+deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
