--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,6 +123,7 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -151,6 +152,7 @@ allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.182.213.61;
 allow 147.45.116.145;
+allow 147.45.49.17;
 allow 147.45.78.34;
 allow 148.113.152.91;
 allow 149.202.79.101;
@@ -553,7 +555,6 @@ allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
 allow 190.103.179.98;
-allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.96.165.34;
 allow 192.108.48.150;
@@ -619,7 +620,6 @@ allow 193.142.147.233;
 allow 193.142.147.69;
 allow 193.168.141.173;
 allow 193.168.143.161;
-allow 193.182.96.246;
 allow 193.188.21.212;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -1503,6 +1503,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
+allow 2a05:541:150:6::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1701,6 +1702,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3ea:372::1;
@@ -1755,6 +1757,7 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
+allow 31.13.195.57;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
@@ -1780,7 +1783,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.210.231.234;
+allow 3.94.69.80;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1991,6 +1994,7 @@ allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 86.104.75.99;
